--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <h1>Logo</h1>
     </div>
 
-    This is the first commit! The second line is added!
+    This is the first commit!
+    
+    The second line is added!
+    
   </body>
 </html>
