--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       <h1>Logo</h1>
     </div>
 
-    This is the first commit!
-    
-    The second line is added!
-    
+    This is the first commit! The second line is added!
+
+    <div class="footer">
+      footer
+    </div>
   </body>
 </html>
