--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     This is the first commit! The second line is added!
 
-    <div class="footer">
+    <div class="footer footer1">
       footer
     </div>
   </body>
